--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -4,39 +4,54 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iniciar Sesión | Macetitas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
   <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
+  <title>Iniciar Sesión - Macetitas</title>
 </head>
 <body style="height: 100vh; display: flex; flex-direction: column">
-  <!-- TOP BAR -->
   {% include "core/repeat/topBar.html" %}
-  <br><br><br>
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-md-6 offset-md-3">
-        <div class="card">
+  <div class="container"></div>
+  <section class="m-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 mb-4 w-25">
+        <div class="card mb-4">
+          <div class="card-header py-3">
+            <h5 class="mb-0">Iniciar Sesión</h5>
+          </div>
           <div class="card-body">
-            <h2>Iniciar Sesión</h2>
-            <hr>
-            <form action="" method="POST">
+            
+            <form method="post">
               {% csrf_token %}
-              {{ form.as_p }}
-              <input type="submit" value="Ingresar" class="btn btn-success float-right">
-              <p class="mt-2">¿Aún no tienes una cuenta? <a href="{% url 'register' %}" class="text-success">Crea una nueva aqui</a></p>
+              
+              <div class="form-group">
+                  <p class="text-danger">{{mensaje}}</p>
+                  <!-- Text input -->
+                  <div class="form-outline mb-4">
+                    <label class="form-label" for="usuario">Nombre de usuario</label>
+                    {{form.username}}
+                    <!-- <input type="text" id="username" name="username" class="form-control"/> -->
+                  </div>
+                  
+                  <!-- Text input -->
+                  <div class="form-outline mb-4">
+                    <label class="form-label" for="password">Contraseña</label>
+                    {{form.password}}
+                    <!-- <input type="password" id="password" name="password" class="form-control" /> -->
+                  </div>
+                  <p class="text-danger">{{ mensaje }}</p>
+              </div>
+              <input type="submit" id="submit" class="btn btn-success w-100 mb-2" value="Ingresar" />
             </form>
+            <p>¿Aún no tienes una cuenta? <a href="{% url 'register' %}" class="text-dark">Crea una nueva aqui</a></p>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
+  {% include "core/repeat/footer.html" %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="{% static 'core/js/form_validation_login.js' %}"></script>
-  <!-- FOOTER -->
-  {% include "core/repeat/footer.html" %}
 </body>
-</html>
