--- a/core/templates/core/contacto.html
+++ b/core/templates/core/contacto.html
@@ -156,7 +156,7 @@ https://developers.arcgis.com/documentation/mapping-apis-and-services/get-starte
             <form action="" method="POST">
               {% csrf_token %}
               {{ form.as_p }}
-              <input type="submit" value="Enviar Mensaje" class="btn w-100 btn-success float-right">
+              <input type="submit" id="submit" value="Enviar Mensaje" class="btn w-100 btn-success float-right" disabled>
             </form>
             {{mensaje}}
           </div>
@@ -164,5 +164,10 @@ https://developers.arcgis.com/documentation/mapping-apis-and-services/get-starte
       </div>
     </div>
   </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="{% static 'core/js/form_validator_contacto.js' %}"></script>
+
 </body>
 </html>
