--- a/core/templates/core/soporte.html
+++ b/core/templates/core/soporte.html
@@ -28,7 +28,7 @@
             <form action="" method="POST">
               {% csrf_token %}
               {{ form.as_p }}
-              <input type="submit" value="Enviar Mensaje" class="btn w-100 btn-success float-right">
+              <input type="submit" id="submit" value="Enviar Mensaje" class="btn w-100 btn-success float-right" disabled>
             </form>
             {{mensaje}}
           </div>
@@ -41,6 +41,6 @@
   {% include "core/repeat/footer.html" %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="js/form_validator.js"></script>
+  <script src="{% static 'core/js/form_validator_soporte.js' %}"></script>
 </body>
 </html>
