--- a/core/templates/registration/editaccount.html
+++ b/core/templates/registration/editaccount.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'core/css/global.css' %}">
   <link rel="icon" type="image/x-icon" href="{% static 'core/img/favicon.ico' %}">
-  <script src="{% static 'core/js/test_validator.js' %}"></script>
+  <!-- <script src="{% static 'core/js/test_validator.js' %}"></script> -->
 </head>
 <body>
   <!-- TOP BAR -->
@@ -25,7 +25,7 @@
             <form action="" method="POST">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <input type="submit" value="Guardar Cambios" class="btn w-100 btn-success float-right">       
+                <input type="submit" id="submit" value="Guardar Cambios" class="btn w-100 btn-success float-right">       
             </form>
 
           </div>
@@ -35,7 +35,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="{% static 'core/js/form_validation_register.js' %}"></script>
+  <script src="{% static 'core/js/form_validator_register.js' %}"></script>
 
 
 </body>
